<resources>
    <string name="app_name">Домодедово</string>
    <string name="heading_tablo">Онлайн-табло</string>
    <string name="heading_register">Онлайн-регистрация</string>
    <string name="heading_schedule">Расписание</string>
    <string name="heading_flight">Рейс</string>
    <string name="heading_services">Услуги</string>
    <string name="heading_wiki">Справочная</string>
    <string name="heading_parking">Парковка</string>
    <string name="heading_route">Как добраться</string>
    <string name="helpdesk">Помощь</string>
    <string name="heading_plan">Схема аэропорта</string>
    <string name="heading_map">Карта полетов</string>
    <string name="heading_airport">Об аэропорте</string>
    <string name="heading_emergency">Экстренная помощь</string>
    <string name="search_field">Поиск по теме вопросов</string>

    <string name="btn_wiki1">Правила</string>
    <string name="btn_wiki2">Контроль</string>
    <string name="btn_wiki3">Багаж</string>
    <string name="back_button">Назад</string>
    <string name="last_notification_date_key">last_notification_date_key</string>
    <string name="currentdatekey">date_key</string>

    <string name="departure">Вылет</string>
    <string name="arrival">Прилет</string>
    <string name="international">Международные рейсы</string>
    <string name="internal">Внутренние рейсы</string>
    <string name="passport_control">Паспортный контроль</string>


    <string name="tab_common_services">Услуги для пассажиров</string>
    <string name="tab_special_services">Специальные сервисы</string>

    <string name="passport_control_content">
        Ничего необычного и требующего каких-либо усилий от летящего пассажира в процедуре паспортного контроля нет. Главное — просто быть внимательным, учтивым, не задавать лишних вопросов и не травить анекдотов — ведь перед Вами представитель власти, от которого зависит, пройдёте Вы на посадку в самолёт или нет.

        Первым делом Вам необходимо пройти к правильной стоечке паспортного контроля. Обычно они делятся на стойки для резидентов страны и для иностранных граждан. Сотрудники паспортного контроля не любят путаницы, поэтому за Вашу ошибку Вы можете получить допрос с пристрастием. Будьте внимательны. Информация о том, на какую стойку Вам проходить обычно вывешена на табло над таможенными кабинками.

        Вам необходимо соблюдать очередь. Пока один человек предоставляет свой паспорт работнику пограничной службы, Вы должны стоять за красной линией вплоть до того, как человек не отойдёт (а лучше, до тех пор, пока Вам не подадут знак о том, что можно проходить). Подойдя к стоечке, Вам необходимо дать только свой паспорт/загранпаспорт сотруднику, желательно без обложки, авиабилета и каких-либо дополнительных документов, если они не требуются таможенником. Работник посмотрит Ваш паспорт, сравнит Вашу личность с фотографией, что вклеена в паспорт, проведёт Ваш паспорт через систему и, если все в порядке, отдаст Вам паспорт и пропустит далее, к воротам вторичного досмотра личных вещей.

        Иногда, сотрудник может задать Вам несколько вопросов, например, цель поездки или откуда Вы прибыли. Не стоит ничего утаивать, сообщайте все так, как есть. Это может повлечь дополнительные вопросы, например, для въезда в Россию сейчас требуют обязательное наличие обратного авиабилета либо средства для проживания на тот период, на который Вы планируете задержаться в стране. Их могут затребовать предъявить. Ничего страшного в этом нет, это нормальная практика, не стоит паниковать.\nЧаще всего, если у Вас ранее не было проблем с законом, депортаций и других негативных отметок в паспорте, контроль в аэропорту Вы пройдёте без проблем.
    </string>
    <string name="schedule_table_list_item_city">Владивосток</string>
    <string name="schedule_table_list_item_time">21:55</string>
    <string name="schedule_table_list_item_period">	17.01.23 - 17.01.23</string>
    <string name="schedule_table_list_item_days">ВТ</string>
    <string name="schedule_table_list_item_flight">ИЕ-9600</string>

    <string name="schedule_table_list_schedule_heading">Расписание рейсов</string>
    <string name="schedule_table_list_item_air_arrival">Аэропорт вылета:</string>
    <string name="schedule_table_list_item_air_destination">Направление:</string>

    <string name="tablo_table_list_item_city">Владивосток</string>
    <string name="tablo_table_list_item_time">21:55</string>
    <string name="tablo_table_list_item_status">Регистрация завершена</string>
    <string name="tablo_table_list_item_avia">Utair</string>
    <string name="tablo_table_list_item_flight">ИЕ-9600</string>
    <string name="tablo_table_list_item_gate">Выход 5</string>
    <string name="tablo_table_list_item_today">Сегодня - 23 декабря</string>
    <string name="tablo_table_list_item_tomorrow">Завтра  - 24 декабря</string>
    <string name="bullet">•</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>